{\rtf1\ansi\ansicpg1252\cocoartf2761
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;}
{\colortbl;\red255\green255\blue255;\red255\green255\blue255;\red0\green0\blue0;}
{\*\expandedcolortbl;;\cssrgb\c100000\c100000\c100000;\cssrgb\c0\c0\c0;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\deftab720
\pard\pardeftab720\partightenfactor0

\f0\fs30 \cf0 \cb2 \expnd0\expndtw0\kerning0
\outl0\strokewidth0 \strokec3 [package]\
name = "referral_program"\
version = "0.1.0"\
edition = "2021"\
\
[dependencies]\
cosmwasm-std = "1.0.0"\
cosmwasm-schema = "1.0.0"\
serde = \{ version = "1.0", features = ["derive"] \}\
thiserror = "1.0"\
\
[lib]\
crate-type = ["cdylib", "rlib"]}